src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>FinServ__TotalHouseholdPremiums__c</fullName>
        <description>Total premiums for all the policies currently owned by the policyholder&apos;s primary household.</description>
        <inlineHelpText>This is the sum of gross written premium (GWP) for all the active policies currently owned by the household.</inlineHelpText>
        <label>Total Household Premiums</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInsuranceJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all insurance policies for which the client is the joint owner.</description>
        <label>Total Insurance Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInsurancePrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all insurance policies for which the client is the primary owner.</description>
        <label>Total Insurance Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInsurance__c</fullName>
        <description>Value of all insurance policies.</description>
        <formula>FinServ__TotalInsurancePrimaryOwner__c + FinServ__TotalInsuranceJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInvestmentsJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all investment accounts for which the client is the joint owner.</description>
        <label>Total Investments Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInvestmentsPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all investment accounts for which the client is the primary owner.</description>
        <label>Total Investments Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInvestments__c</fullName>
        <description>Value of all investment accounts.</description>
        <formula>FinServ__TotalInvestmentsPrimaryOwner__c + FinServ__TotalInvestmentsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Investments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalLiabilitiesJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Liabilities Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalLiabilitiesPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Liabilities Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalLiabilities__c</fullName>
        <description>Value of all liabilities accounts.</description>
        <formula>FinServ__TotalLiabilitiesPrimaryOwner__c + FinServ__TotalLiabilitiesJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssetsJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all physical assets such as collectibles or precious metals for which the client is the joint owner.</description>
        <label>Total Nonfinancial Assets Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssetsPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all physical assets such as collectibles or precious metals for which the client is the primary owner.</description>
        <label>Total Nonfinancial Assets Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssets__c</fullName>
        <description>Value of all physical assets such as collectibles or precious metals.</description>
        <formula>FinServ__TotalNonfinancialAssetsPrimaryOwner__c + FinServ__TotalNonfinancialAssetsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Nonfinancial Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccountsJointOwner__c</fullName>
        <description>Total numbers of client&apos;s financial accounts as a joint owner.</description>
        <label>Number of Fin. Accounts - Joint Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c</fullName>
        <description>Total numbers of client&apos;s financial accounts as a primary owner.</description>
        <label>Number of Fin. Accounts - Primary Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccounts__c</fullName>
        <description>Total number of the client&apos;s financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c + FinServ__TotalNumberOfFinAccountsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Financial Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditJointOwner__c</fullName>
        <label>Total Outstanding Credit - Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditPrimaryOwner__c</fullName>
        <label>Total Outstanding Credit - Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCredit__c</fullName>
        <description>Value of client&apos;s total outstanding credit from the financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalOutstandingCreditPrimaryOwner__c + FinServ__TotalOutstandingCreditJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalPremium__c</fullName>
        <description>Total Premium field for Insurance</description>
        <label>Total Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__WalletShare__c</fullName>
        <formula>ROUND(((FinServ__TotalHeldFinAcctsPrimaryOwner__c + FinServ__TotalHeldFinAcctsJointOwner__c) / IF( (FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c)=0,1,(FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c))), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wallet Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fixed_Income_Value__c</fullName>
        <label>Fixed Income Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Income_pct__c</fullName>
        <label>Fixed Income pct</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fixed_Income_pct_fm__c</fullName>
        <formula>IF(Total_Acct_Value__c &gt; 0, Fixed_Income_Value__c / (Equity_Value__c + Fixed_Income_Value__c + Cash_Value__c + Other_Value__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixed Income pct fm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Groups__c</fullName>
        <label>Groups</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Holiday_Card__c</fullName>
        <label>Holiday Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Entity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Household Entity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Entity__c</fullName>
        <label>Household Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Memo__c</fullName>
        <label>Important Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Household_Salutation__c</fullName>
        <label>Household Salutation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>This field shows an icon based on the Record Type (to distinctly show difference between Households &amp; members of Household)</description>
        <formula>IMAGE( 
CASE(RecordType.Name, 
&quot;Household&quot;, &quot;/resource/SF_Household_Icon&quot;, 
&quot;Contact Client/Prospect&quot;, &quot;/resource/SF_Individual_Icon&quot;, 
&quot;/resource/SF_Individual_Icon&quot;), 
&quot;Client Type Icon&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>ImportID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Person_Meeting_Overdue__c</fullName>
        <formula>IF(ISBLANK(Next_In_Person_Meeting__c), 0,

IF(( Next_In_Person_Meeting__c - TODAY()) &gt;= $Setup.Service_Level_Defaults__c.Num_Days_Ahead_Overdue__c,0,1))</formula>
        <label>In Person Meeting Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Person_Meeting_Status__c</fullName>
        <formula>IF(NOT(ISBLANK(Next_In_Person_Meeting__c)),
IF( ((Next_In_Person_Meeting__c - TODAY()) &gt;= $Setup.Service_Level_Defaults__c.Num_Days_Ahead_On_Target__c),
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;On-Target&quot;, 16,100),
IF( (((Next_In_Person_Meeting__c - TODAY()) &lt; $Setup.Service_Level_Defaults__c.Num_Days_Ahead_On_Target__c) &amp;&amp; ((
Next_In_Person_Meeting__c - TODAY()) &gt;= $Setup.Service_Level_Defaults__c.Num_Days_Ahead_Overdue__c )),
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;Due&quot;, 16,100) ,
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Overdue&quot;, 16,100))
), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Person Meeting Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Person_Meetings_Year__c</fullName>
        <label>In Person Meetings per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jigsaw_Company_Id__c</fullName>
        <label>Jigsaw Company Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCURequestDate__c</fullName>
        <label>Last Stay-in-Touch Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastCUUpdateDate__c</fullName>
        <label>LastCUUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_FMA_Form_Created__c</fullName>
        <label>Last FMA Form Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_In_Person_Meeting__c</fullName>
        <label>Last In Person Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Portfolio_Review__c</fullName>
        <label>Last Portfolio Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Relationship_Call__c</fullName>
        <label>Last Relationship Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account - Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Owner_ID__c</fullName>
        <label>Legacy Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Primary_Contact__c</fullName>
        <label>Legacy Primary Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Revenue__c</fullName>
        <label>Lifetime Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Reminder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Merge_with_HH_ID__c</fullName>
        <label>Merge with HH ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mutual_Fund_Invest_Experience__c</fullName>
        <label>Mutual Fund Invest Experience</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_In_Person_Meeting__c</fullName>
        <formula>IF(In_Person_Meetings_Year__c != 0, CASE( MOD( FLOOR( 365 / In_Person_Meetings_Year__c) + Last_In_Person_Meeting__c - DATE(1900, 1, 7), 7),
0, FLOOR( 365 / In_Person_Meetings_Year__c) + Last_In_Person_Meeting__c + 1,
6, FLOOR( 365 / In_Person_Meetings_Year__c) + Last_In_Person_Meeting__c + 2,
FLOOR( 365 / In_Person_Meetings_Year__c) + Last_In_Person_Meeting__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next In Person Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Portfolio_Review__c</fullName>
        <formula>IF(Portfolio_Reviews_Year__c != 0, CASE( MOD( FLOOR( 365 / Portfolio_Reviews_Year__c) + Last_Portfolio_Review__c - DATE(1900, 1, 7), 7),
0, FLOOR( 365 / Portfolio_Reviews_Year__c) + Last_Portfolio_Review__c + 1,
6, FLOOR( 365 / Portfolio_Reviews_Year__c) + Last_Portfolio_Review__c + 2,
FLOOR( 365 / Portfolio_Reviews_Year__c) + Last_Portfolio_Review__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Portfolio Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Relationship_Call__c</fullName>
        <formula>IF( Relationship_Calls_Year__c != 0, CASE( MOD( FLOOR( 365 / Relationship_Calls_Year__c) + Last_Relationship_Call__c - DATE(1900, 1, 7), 7),
0, FLOOR( 365 / Relationship_Calls_Year__c) + Last_Relationship_Call__c + 1,
6, FLOOR( 365 / Relationship_Calls_Year__c) + Last_Relationship_Call__c + 2,
FLOOR( 365 / Relationship_Calls_Year__c) + Last_Relationship_Call__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Relationship Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Options_Invest_Experience__c</fullName>
        <label>Options Invest Experience</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Pct__c</fullName>
        <label>Other Pct</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <formula>FinServ__PrimaryContact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Value__c</fullName>
        <label>Other Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_pct_fm__c</fullName>
        <formula>IF(Total_Acct_Value__c &gt; 0, Other_Value__c / (Equity_Value__c + Fixed_Income_Value__c + Cash_Value__c + Other_Value__c ) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other pct fm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Parents_1__c</fullName>
        <label>Parents 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parents_2__c</fullName>
        <label>Parents 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonOtherPhone__c</fullName>
        <formula>FinServ__PrimaryContact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneB__c</fullName>
        <description>Phone number to display in Banner (highlights panel).
This will be chosen form available phone numbers using a trigger.</description>
        <label>Phone:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Email__c</fullName>
        <description>Phone+ Email - For display on Compact Layout only</description>
        <formula>Phone&amp;BR()&amp;Daml_Email__c</formula>
        <label>Phone/Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Url__c</fullName>
        <label>Photo Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placeholder_Household__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record is a placeholder record and not a real household. Financial accounts assigned to this household are visible in the &quot;Household Assignment Queue&quot; feature.</description>
        <inlineHelpText>Indicates that this record is a placeholder record and not a real household. Financial accounts assigned to this household are visible in the &quot;Household Assignment Queue&quot; feature.</inlineHelpText>
        <label>Placeholder Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plans__c</fullName>
        <label>Plans</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio_Review_Overdue__c</fullName>
        <formula>IF(ISBLANK( Next_Portfolio_Review__c ), 0,

IF(( Next_Portfolio_Review__c - TODAY()) &gt;= $Setup.Service_Level_Defaults__c.Num_Days_Ahead_Overdue__c,0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Review Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio_Review_Status__c</fullName>
        <formula>IF( NOT(ISBLANK(Next_Portfolio_Review__c)),
IF( ((Next_Portfolio_Review__c - TODAY()) &gt;= $Setup.Service_Level_Defaults__c.Num_Days_Ahead_On_Target__c),
IMAGE(&quot;/resource/g&quot;, &quot;&quot;, 16,100),
IF( (((Next_Portfolio_Review__c - TODAY()) &lt; $Setup.Service_Level_Defaults__c.Num_Days_Ahead_On_Target__c) &amp;&amp; ((
Next_Portfolio_Review__c - TODAY()) &gt;= $Setup.Service_Level_Defaults__c.Num_Days_Ahead_Overdue__c )),
IMAGE(&quot;/resource/y&quot;, &quot;&quot;, 16,100) ,
IMAGE(&quot;/resource/r&quot;, &quot;&quot;, 16,100))), IMAGE(&quot;/resource/gy&quot;, &quot;&quot;, 16,100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Reviews_Year__c</fullName>
        <label>Portfolio Reviews per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Revenue__c</fullName>
        <label>Previous Year Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Age__c</fullName>
        <formula>FinServ__PrimaryContact__r.FinServ__Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>FinServ__PrimaryContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>FinServ__PrimaryContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Call_Overdue__c</fullName>
        <formula>IF(ISBLANK(Next_Relationship_Call__c), 0 ,

IF((Next_Relationship_Call__c - TODAY()) &gt;= $Setup.Service_Level_Defaults__c.Num_Days_Ahead_Overdue__c,0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Call Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Call_Status__c</fullName>
        <formula>IF( NOT(ISBLANK(Next_Relationship_Call__c)),
IF( ((Next_Relationship_Call__c - TODAY()) &gt;= $Setup.Service_Level_Defaults__c.Num_Days_Ahead_On_Target__c),
IMAGE(&quot;/resource/g&quot;, &quot;&quot;, 16,100),
IF( (((Next_Relationship_Call__c - TODAY()) &lt; $Setup.Service_Level_Defaults__c.Num_Days_Ahead_On_Target__c) &amp;&amp; ((
Next_Relationship_Call__c - TODAY()) &gt;= $Setup.Service_Level_Defaults__c.Num_Days_Ahead_Overdue__c )),
IMAGE(&quot;/resource/y&quot;, &quot;&quot;, 16,100) ,
IMAGE(&quot;/resource/r&quot;, &quot;&quot;, 16,100))
), IMAGE(&quot;/resource/gy&quot;, &quot;&quot;, 16,100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Call Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Calls_Year__c</fullName>
        <label>Relationship Calls per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Owner__c</fullName>
        <label>Relationship Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rep_Numbers__c</fullName>
        <label>Rep Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewDate__c</fullName>
        <description>Date of Last Review</description>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Email__c</fullName>
        <formula>FinServ__PrimaryContact__r.Second_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siblings_1__c</fullName>
        <label>Siblings 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Siblings_2__c</fullName>
        <label>Siblings 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stock_Invest_Experience__c</fullName>
        <label>Stock Invest Experience</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTMonths__c</fullName>
        <label>T12 Months Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_12_Percent_ROA__c</fullName>
        <formula>100/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T 12 Percent ROA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>T_12_ROA_pct__c</fullName>
        <label>T 12 ROA pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>T_12_Revenue_Trade2__c</fullName>
        <formula>IF(T_12_Trades__c = 0, 0, TTMonths__c / T_12_Trades__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T 12 Revenue per Trade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_12_Trades__c</fullName>
        <label>T 12 Trades</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Bracket__c</fullName>
        <label>Tax Bracket</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Total__c</fullName>
        <description>RTS Testing only</description>
        <formula>Cash_Value__c + Other_Value__c+Fixed_Income_Value__c+Equity_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                    <default>true</default>
                    <label>C</label>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Acct_Value__c</fullName>
        <label>Total Acct Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wealthcare_Date__c</fullName>
        <label>Wealthcare Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wealthcare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wealthcare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <formula>FinServ__PrimaryContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Record_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Revenue__c</fullName>
        <label>YTD Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Icon__c</columns>
        <columns>FinServ__Status__c</columns>
        <columns>FinServ__PrimaryContact__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>Total_Acct_Value__c</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesHousehold</value>
        </filters>
        <label>All Households</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Icon__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>Total_Acct_Value__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Contact_Client</value>
        </filters>
        <label>All Clients and Prospects</label>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Businesses</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesBusiness</value>
        </filters>
        <label>My Businesses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Clients</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Icon__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesIndividual</value>
        </filters>
        <filters>
            <field>FinServ__IndividualType__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filters>
        <label>My Clients</label>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Groups</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesHousehold</value>
        </filters>
        <filters>
            <field>FinServ__IndividualType__c</field>
            <operation>equals</operation>
            <value>Group</value>
        </filters>
        <label>My Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Institutions</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FinServ__ClientCategory__c</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <columns>FinServ__LastInteraction__c</columns>
        <columns>FinServ__NextInteraction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesInstitution</value>
        </filters>
        <label>My Institutions</label>
        <language>en_US</language>
    </listViews>
</CustomObject>